# archit-app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  planning.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
archit_app/: __init__.py  history.py  query.py  units.py  viewport.py
archit_app/analysis/: __init__.py  accessibility.py  area.py  circulation.py  compliance.py  daylighting.py  roomfinder.py  topology.py  validate.py  visibility.py
archit_app/building/: __init__.py  building.py  grid.py  land.py  layer.py  level.py  site.py
archit_app/core/: __init__.py  errors.py  registry.py
archit_app/elements/: __init__.py  annotation.py  base.py  beam.py  column.py  elevator.py  furniture.py  material.py  opening.py  ramp.py  room.py  slab.py  staircase.py  transform_utils.py  wall.py  wall_join.py
archit_app/geometry/: __init__.py  bbox.py  converter.py  crs.py  curve.py  point.py  polygon.py  primitives.py  transform.py  vector.py
archit_app/io/: __init__.py  dxf.py  geojson.py  ifc.py  image.py  json_schema.py  pdf.py  svg.py
archit_app/protocol/: __init__.py  _base.py  adapters.py  handoff.py  message.py  mutation.py  refs.py  report.py  schema_export.py  snapshot.py  version.py
archit_app/utils/: __init__.py  units.py
docs/: concepts.md  contributing.md  cookbook.md  getting_started.md  index.md  roadmap.md
docs/api/: building.md  elements.md  geometry.md  io.md  protocol.md  registry.md
floorplan/: __init__.py
floorplan/building/: __init__.py  building.py  level.py  site.py
floorplan/core/: __init__.py  registry.py
floorplan/elements/: __init__.py  base.py  column.py  opening.py  room.py  wall.py
floorplan/geometry/: __init__.py  bbox.py  curve.py  point.py  polygon.py  vector.py
floorplan/io/: __init__.py  dxf.py  geojson.py  json_schema.py  svg.py
floorplan/utils/: __init__.py  units.py
tests/: conftest.py  test_history.py  test_query.py  test_units.py  test_viewport.py
tests/analysis/: test_accessibility.py  test_area.py  test_circulation.py  test_compliance.py  test_daylighting.py  test_roomfinder.py  test_topology.py  test_visibility.py
tests/building/: test_building.py  test_building_stats.py  test_grid.py  test_land.py  test_layer.py  test_spatial_index.py  test_validate.py
tests/elements/: test_annotation.py  test_beam.py  test_column.py  test_elevator.py  test_furniture.py  test_material.py  test_opening_factories.py  test_ramp.py  (+7 more)
(+25 files in other folders)
