[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archit-app"
version = "0.1.0"
description = "A general-purpose, extensible floorplan library for architects and developers."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "shapely>=2.0,<3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]
io = [
    "ezdxf>=1.3",
    "svgwrite",
]
image = [
    "pillow>=10",
    "opencv-python-headless>=4.9",
]
analysis = [
    "networkx>=3.2",
    "scipy>=1.12",
]

[tool.hatch.build.targets.wheel]
packages = ["archit_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
