[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archit-app"
version = "0.3.3"
description = "A general-purpose, extensible floorplan library for architects and developers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["floorplan", "architecture", "building", "geometry", "BIM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic>=2.0,<3",
    "shapely>=2.0,<3",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/archit-app/archit-app"
Repository = "https://github.com/archit-app/archit-app"
Issues = "https://github.com/archit-app/archit-app/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]
io = [
    "ezdxf>=1.3",
    "svgwrite",
]
ifc = [
    "ifcopenshell>=0.7",
]
image = [
    "pillow>=10",
    "opencv-python-headless>=4.9",
]
pdf = [
    "reportlab>=4.0",
]
analysis = [
    "networkx>=3.2",
    "scipy>=1.12",
]

[tool.hatch.build.targets.wheel]
packages = ["archit_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
